Added a proper README, database creation script, and insomnia configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/restapi
 spring.datasource.username = root
 spring.datasource.password = password
+
+##if you're mysql configuration is different you might need to change the connection string and credentials above
