Added more instructions to readme. Added lines to application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.datasource.username = root
 spring.datasource.password = password
 
 ##if you're mysql configuration is different you might need to change the connection string and credentials above
+
+##This line is not necessary, but you can change it to determine the port on which the application is launched
+server.port = 8080
+
+##This file can be used to configure things like logging, application name, mail, internationalization, file encoding,
+##and any number of other things.
